--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
